--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,47 @@
+*{
+	border: dashed 1px red;
+}
+.body{
+	margin: 0;
+}
+.header{
+	display: flex;
+	justify-content: space-between;
+}
 .main-content__title{
 	font-family: Roboto;
 }
 .main-content__text{
 	font-family: Roboto;
 }
+.wrapper{
+	margin: auto;
+	width: 80%;
+	
+}
+.logo,.menu{
+	display: inline-block;
+}
+.logo{
+	padding: 40px 0;
+}
+
+.menu{
+	display: flex;
+	align-items: center;
+}
+
+.menu__item{
+	padding: 0 13px;
+}
+.menu__item:last-child{
+	padding-right: 0;
+}
+
+.main-content
+.main-content__title
+.main-content__text
+.main-section__button{
+	font-family: Roboto;
+}
+.image-content
