--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 	justify-content: space-between;
 }
 .main-content__title{
-	font-family: Roboto;
+	font-family: "pt_serifbold";
 }
 .main-content__text{
 	font-family: Roboto;
