--- a/styles.css
+++ b/styles.css
@@ -37,11 +37,54 @@
 }
 
 .menu__item{
-	padding: 0 13px;
+	position:relative;
+	font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
+	color: #000000;
+	text-decoration: none;
+	margin-right: 26px;
+	transition: opacity .5s;
 }
 .menu__item:last-child{
-	padding-right: 0;
+	margin-right: 0;
 }
+.menu__item:hover:after{
+ position:absolute;
+ display: block;
+ content: '';
+ left: 0;
+ width: 100%;
+ height: 3px;
+ background: #0056EC;
+ }
+
+.menu__item_active::after{
+ position:absolute;
+ display: block;
+ content: '';
+ left: 0;
+ width: 100%;
+ height: 3px;
+ background: #0056EC;
+ }
+ .menu__item:after{
+ position:absolute;
+ display: block;
+ content: '';
+ left: 0;
+ width: 100%;
+ height: 3px;
+ background: #0056EC;
+ opacity: 0;
+ transition: opacity .5s;
+ }
+
+ .menu__item:hover{
+ 	opacity: 0.5;
+ }
+ .menu__item:hover:after,.menu__item_active:after{
+ 	opacity: 1;
+ }
+
 
 .main-content
 .main-content__title
