--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,3 @@
-*{
-	border: dashed 1px red;
-}
 .body{
 	margin: 0;
 }
@@ -26,7 +23,6 @@
 .logo {
  width: 190px;
  height: 35px;
- border: dashed 1px red;
  background:  url('img/logo.svg');
 }
 
@@ -86,9 +82,18 @@
  }
 
 
-.main-content
-.main-content__title
-.main-content__text
+.main-content{
+	padding-top: 100px;
+	width: 37%;
+}
+.main-content__title{
+	margin: 0 0 40px 0;
+	font: 50px/65px "pt_serifbold", arial, helvetica, sans-serif;
+}
+.main-content__text{
+	margin: 0 0 41px 0;
+	font: 18px/21px Roboto, arial, helvetica, sans-serif;
+}
 .main-section__button{
 	font-family: Roboto;
 }
